# CMake

./: README.md
PyTorch_Tips_Details/: b_TensorCompute.ipynb
a_Overview/: description.md
b_Practice_Make_file/: description.md
b_Practice_Make_file/Practice/: CMakeLists.txt  main.cpp
c_add_executable/: description.md
c_add_executable/Practice/: CMakeLists.txt  foo.cpp  main.cpp
d_Compile_Option_Setting/: description.md
d_Compile_Option_Setting/Practice/: CMakeLists.txt  main.cpp
e_Include_Path_Setting/: description.md
e_Include_Path_Setting/Practice/: CMakeLists.txt
f_Make_Library/: description.md
f_Make_Library/Practice/: CMakeLists.txt
f_Make_Library/Practice/includes/: shape.h
f_Make_Library/Practice/lib/: CMakeLists.txt  shape.cpp
g_Make_Library_Using_OtherLib_Case/: description.md
g_Make_Library_Using_OtherLib_Case/Practice/lib/: CMakeLists.txt  shape.cpp
h_Using_FetchContent/: description.md
h_Using_FetchContent/Practice/: CMakeLists.txt  main.cpp
h_Using_FetchContent/Practice/includes/: color.h  shape.h
h_Using_FetchContent/Practice/lib/: CMakeLists.txt  color.cpp  shape.cpp
i_Tips/: description.md
